# executive-helper

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  SOURCES.md  pyproject.toml
configs/: finetune_auto.yaml  finetune_ef.yaml  settings.py
custom_components/executive_helper/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  sensor.py  strings.json
deploy/: .env.example  compose.yaml
docs/: ubuntu.md
prompts/: auto_system.md  ef_system.md
scripts/: analyze_dataset.py  setup_training_wsl.sh  test_merged.py  validate_export.py
src/audio/: ha_monitor.py  intent_tracker.py  pipeline.py  streaming.py  transcription.py  tts.py  websocket_server.py
src/data/: generate.py  preview.py  techniques.py  tuple_generator.py
src/eval/: cases.py  run.py
src/finetune/: export.py  train.py
src/gateway/: app.py  models.py
src/journal/: store.py
src/web/: app.py
