[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "executive-helper"
version = "0.1.0"
description = "Dual Phi-4-mini system: executive dysfunction coaching + home automation orchestration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
audio = [
    "faster-whisper>=1.0",
    "kokoro>=0.9",
    "soundfile>=0.12",
    "numpy>=1.26",
    "websockets>=13.0",
]
finetune = [
    "unsloth[colab-new]>=2024.8",
    "datasets>=2.19",
    "trl>=0.9",
    "transformers>=4.57.3,<=5.2.0",
    "peft>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
